Jann 30/objects/GS1_Flavour__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Dsp__c</fullName>
        <formula>IF(ISNUMBER(Code__c),VALUE(Code__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flavour Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Flavour Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trademark__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trademark</label>
        <referenceTo>GS1_Trademark__c</referenceTo>
        <relationshipLabel>Flavours</relationshipLabel>
        <relationshipName>Flavours</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <formula>Trademark__r.Code__c + &apos;~&apos; + Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKey</label>
        <type>Text</type>
    </fields>
    <label>GS1 Flavour</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Trademark__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Active_Flavours</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Trademark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 - Active Flavours</label>
    </listViews>
    <listViews>
        <fullName>X2_Inactive_Flavours</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Trademark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2 - Inactive Flavours</label>
    </listViews>
    <nameField>
        <label>Flavour Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000001Ei6mEAC_00N90000006wT19EAE</fullName>
        <active>true</active>
        <field>GS1_BBN__c.Flavour__c</field>
        <filterItems>
            <field>GS1_Flavour__c.Trademark__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trademark__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>BBN Code_Flavour</name>
        <sourceObject>GS1_BBN__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000001EiecEAC_00N90000006whyOEAQ</fullName>
        <active>true</active>
        <field>GS1_Request__c.Flavour__c</field>
        <filterItems>
            <field>GS1_Flavour__c.Trademark__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trademark__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Product_Flavour</name>
        <sourceObject>GS1_Request__c</sourceObject>
    </namedFilters>
    <pluralLabel>GS1 Flavours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>